<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".EducationActivity">

    <!-- Primary Education -->
    <LinearLayout
        android:id="@+id/primaryEducationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/primaryEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/primary_education"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/primaryEducationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/nalanda_public_school"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/primaryEducationLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jabalpur_mp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/primaryEducationGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_8_80_cgpa"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/primaryEducationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_2017_2018"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Secondary Education -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierAllowsGoneWidgets="true"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="primaryEducationLayout,secondaryEducationLayout"
        tools:layout_editor_absoluteY="20dp" />

    <LinearLayout
        android:id="@+id/secondaryEducationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryEducationLayout">

        <TextView
            android:id="@+id/secondaryEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/secondary_education"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/secondaryEducationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/maharashtra_high_school"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondaryEducationLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jabalpur_mp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondaryEducationGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_8_85_cgpa"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/secondaryEducationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_2019_2020"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Define a barrier to keep the secondaryEducationLayout below primaryEducationLayout -->

    <!-- Rest of the layout, including primary and secondary education details, goes here -->

</androidx.constraintlayout.widget.ConstraintLayout>
