<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="ExtraText">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/DarkModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10sp"
            android:minHeight="48dp"
            android:text="@string/dark_mode"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,VisualLintButtonSize" />

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/amoghsaxena" />

        <TextView
            android:id="@+id/textHeading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/amogh_saxena"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/full_stack_developer_and_youtuber"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skills"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/skills"
                android:textColor="#00796B"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/experience"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/experience"
                android:textColor="#00796B"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/education"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/education"
                android:textColor="#00796B"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/achievements"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/achievements"
                android:textColor="#00796B"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize,TextSizeCheck" />

        </LinearLayout>

        <Space
            android:id="@+id/dividerSpace"
            android:layout_width="match_parent"
            android:layout_height="96dp" />

        <Button
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_me"
            style="@style/CustomButtonStyle"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>